# BinanceBotAssistant

./: .gitignore  .replit  ACTION_PRICE_ANALYSIS_REPORT.md  ANALYSIS_MAIN_STRATEGIES.md  BINANCE_API_ISSUE.md  MAIN_STRATEGIES_FULL_ANALYSIS_RU.md  PERFORMANCE_ANALYSIS.md  README.md  README_RU.md  SIGNALS_ONLY_MODE.md  STOP_LOSS_SIGNALS.csv  STOP_LOSS_SIGNALS.txt  STRATEGIES_OVERVIEW.md  STRATEGY_CONTROL.md  TELEGRAM_FIX_WINDOWS.md  TELEGRAM_PROXY_SETUP.md  TEST_SCRIPT.md  TREND_IMPROVEMENT_PLAN.md  action_price_sl_analysis_report.md  analysis_output.txt  analyze_bias_vs_results.py  analyze_json_signals.py  analyze_main_strategies.py  analyze_sl_scores.py  analyze_strategies_from_logs.py  analyze_zone_registry.py  apply_migration.py  bias_results.txt  botfather_commands.txt  check_db_data.py  check_renderusdt_data.py  check_v3_data.py  check_v3_signals.py  check_v3_stats_bug.py  cleanup_v3_signals.py  clear_blocked_symbols.py  clear_signals.py  clear_v3_signals.py  clear_v3_stats_FINAL.py  clear_zones_only.py  (+31 more)
analytics/: analyze_tradingview_results.py  full_analysis.py  strategy_performance.py
attached_assets/: Manual_Addenda_Consolidated_v1.0_1760060558507.docx  Pasted---1760960381831_1760960381832.txt  Pasted---1761093393067_1761093393067.txt  Pasted--10--1760301715594_1760301715595.txt  Pasted--15m-Speculative-Futures-Suite-0-Tradin-1760741933499_1760741933500.txt  Pasted--EMA200-body-cros-1760445444789_1760445444790.txt  Pasted--Failed-0-6-strategies-0-signals-Rate-0-1-2025-10-15-03-32-50-EEST-INFO-Action--1760488662886_1760488662886.txt  (+162 more)
src/action_price/: avwap.py  (+11 more)
(+136 files in other folders)
